--- a/Bdonor/app/src/main/res/layout/activity_main_screen.xml
+++ b/Bdonor/app/src/main/res/layout/activity_main_screen.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_main_screen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.kakhtar.bdonor.activities.MainScreen"
+    tools:context="com.example.kakhtar.bdonor.activities.LoginScreen"
 
     >
 
