--- a/Bdonor/app/src/main/res/values/styles.xml
+++ b/Bdonor/app/src/main/res/values/styles.xml
@@ -9,4 +9,11 @@
 
     </style>
 
+    <!-- Base application theme. -->
+    <style name="NoAppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+
+
+    </style>
+
 </resources>
